# procvue

./: .gitignore  LICENSE  README.md  meson.build
data/: disk.edc  groups.edc  hostname.edc  loadavg.edc  meson.build  net.edc  procvue.edc  ram.edc  thermal.edc
data/desktop/: meson.build  procvue.desktop
data/icons/: meson.build
data/themes/default/: colorclasses.edc  cpu.edc  meson.build  procs.edc  uptime.edc
src/: config.c  config.h  disk.c  disk.h  enigmatic.c  enigmatic.h  main.c  main.h  meson.build  poll.c  poll.h  uptime.c  uptime.h
